; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf64-ppc.c_savegpr1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf64-ppc.c_savegpr1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STD_R0_0R12 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*, i32)* @savegpr1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @savegpr1(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = load i64, i64* @STD_R0_0R12, align 8
  %9 = load i32, i32* %6, align 4
  %10 = shl i32 %9, 21
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %8, %11
  %13 = add nsw i64 %12, 65536
  %14 = load i32, i32* %6, align 4
  %15 = sub nsw i32 32, %14
  %16 = mul nsw i32 %15, 8
  %17 = sext i32 %16 to i64
  %18 = sub nsw i64 %13, %17
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @bfd_put_32(i32* %7, i64 %18, i32* %19)
  %21 = load i32*, i32** %5, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 4
  ret i32* %22
}

declare dso_local i32 @bfd_put_32(i32*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
